--- a/about.qmd
+++ b/about.qmd
@@ -1,9 +1,40 @@
 ---
-title: "About"
+title: "Brandon K. Martinez."
+image: "images/on.jpg"
+about:
+  template: broadside
+  links:
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/brandonth/
+    - icon: github
+      text: GitHub
+      href: https://github.com/Brandon780
+      
 ---
+--------------------------------------------------------------------
 
-About this site
 
-```{r}
-1 + 1
-```
+<strong>**soy cientifico de datos.**</strong> Me gusta escribir en mi newsletter para compartir con otros las cosas nuevas que aprendo sobre tecnología, análisis de información, ciencia estadísticas
+</strong>  y cómo combinar todos estos temas.
+
+
+Actualmente, estoy desarrollando un modelo predictivo como parte de mi tesis, lo que me ha permitido profundizar en algoritmos de aprendizaje automático y ajuste de hiperparámetros.
+
+
+Disfruto relacionarme con personas que comparten mi interés por la ciencia de datos. Además participo en comunidades y plataformas 
+
+### Experiencia
+
+
+Analista de informacion y de Datos / Roles en estadística aplicada | Años recientes
+
+
+### Educación
+
+<strong>Licenciatura en Ing.Estadística</strong> | Universidad en Panamá | Maestría Analitica de datos | Universidad Tecnológica de Panamá ( actualmente)
+
+Certificaciones y cursos complementarios en plataformas como Coursera, enfocados en analítica, visualización de datos y ciencia de datos.
+
+### Reflexion
+A veces no tienes apoyo ni contactos, y dan ganas de rendirse, pero el esfuerzo constante eventualmente dará resultados , la esperanza es lo ultimo que se pierde.
